# rust-eve

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
docs/: vision.md
src/: main.rs  tests.rs
templates/: callback.html.hbs  index.html  index.html.hbs  links.html.hbs  result.html.hbs  status.html.hbs
templates/error/: 404.html.hbs
util/: tokenfetcher.py
